# H-Oobleck

./: Cargo.toml  LICENSE  README.md  build-wheels.sh  build.sh  pyproject.toml
docs/: Oobleck-test-instructions.md
examples/: README.md  data_builder.py  run_gpt2.py  run_singlenode.py
oobleck/: __init__.py  cli.py
oobleck/elastic/: README.md  agent.py  master_service.proto  master_service_pb2.py  master_service_pb2.pyi  master_service_pb2_grpc.py  run.py
oobleck/engine/: __init__.py  configuration_engine.py  execution_engine.py  pipeline_instantiator.py  plugin.py
oobleck/planning/: ditto.py  planner.pyi  profiler.py
rust/: ditto.rs  execution_result.rs  lib.rs  pipeline_template_generator.rs
tests/: conftest.py
tests/elastic/: conftest.py  test_agent.py  test_master.py
tests/engine/: conftest.py  test_execution_engine.py  test_instantiator.py  test_reconfiguration.py
tests/planning/: data_builder.py  test_planner.py  test_profiler.py
