[package]
name = "oobleck"
version = "0.0.1"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
dashmap = { version = "5.5", features = ["rayon"] }
rayon = "1.8" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.9"
log = "0.4"
env_logger = "0.11"

[lib]
name = "planner"
crate-type = ["cdylib"]
path = "rust/lib.rs"

[build-dependencies]
pyo3-build-config = "0.21.0"